--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -1,11 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="lowe.battleship.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="465.0" prefWidth="451.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lowe.battleship.FXMLController">
     <children>
-        <Button layoutX="128.0" layoutY="107.0" onAction="#btnClickAction" text="Click Me!" />
-        <Label fx:id="lblOut" layoutX="53.0" layoutY="30.0" minHeight="16" minWidth="69" prefHeight="52.0" prefWidth="215.0" />
+        <Label fx:id="lblOut" layoutX="53.0" layoutY="30.0" minHeight="16" minWidth="69" prefHeight="52.0" prefWidth="215.0" text="Begin" />
+      <Button fx:id="btnA1" layoutX="118.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnA1a" prefHeight="39.0" prefWidth="40.0" />
+      <Label layoutX="78.0" layoutY="149.0" text="A" />
+      <Button fx:id="btnA2" layoutX="158.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnA2a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnA3" layoutX="198.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnA3a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnA4" layoutX="238.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnA4a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnA5" layoutX="278.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnA5a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnB2" layoutX="158.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnB2a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnC1" layoutX="118.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnC1a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnD1" layoutX="118.0" layoutY="255.0" mnemonicParsing="false" onAction="#btnD1a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnE1" layoutX="118.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnE1a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnB1" layoutX="118.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnB1a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnB3" layoutX="198.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnB3a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnB4" layoutX="238.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnB4a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnB5" layoutX="278.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnB5a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnC2" layoutX="158.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnC2a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnC3" layoutX="198.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnC3a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnC4" layoutX="238.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnC4a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnC5" layoutX="278.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnC5a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnD2" layoutX="158.0" layoutY="255.0" mnemonicParsing="false" onAction="#btnD2a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnD3" layoutX="198.0" layoutY="255.0" mnemonicParsing="false" onAction="#btnD3a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnD4" layoutX="238.0" layoutY="255.0" mnemonicParsing="false" onAction="#btnD4a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnD5" layoutX="278.0" layoutY="255.0" mnemonicParsing="false" onAction="#btnD5a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnE2" layoutX="158.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnE2a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnE3" layoutX="198.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnE3a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnE4" layoutX="238.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnE4a" prefHeight="39.0" prefWidth="40.0" />
+      <Button fx:id="btnE5" layoutX="278.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnE5a" prefHeight="39.0" prefWidth="40.0" />
+      <Label layoutX="78.0" layoutY="188.0" text="B" />
+      <Label layoutX="78.0" layoutY="227.0" text="C" />
+      <Label layoutX="77.0" layoutY="266.0" text="D" />
+      <Label layoutX="78.0" layoutY="305.0" text="E" />
+      <Label layoutX="134.0" layoutY="106.0" text="1" />
+      <Label layoutX="175.0" layoutY="106.0" text="2" />
+      <Label layoutX="215.0" layoutY="106.0" text="3" />
+      <Label layoutX="255.0" layoutY="106.0" text="4" />
+      <Label layoutX="295.0" layoutY="106.0" text="5" />
     </children>
 </AnchorPane>
