--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,21 +9,13 @@
 <AnchorPane id="AnchorPane" prefHeight="532.0" prefWidth="468.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lowe.battleship.FXMLController">
     <children>
         <Label fx:id="lblOut" layoutX="53.0" layoutY="30.0" minHeight="16" minWidth="69" prefHeight="52.0" prefWidth="215.0" text="Begin" />
-      <Label layoutX="78.0" layoutY="149.0" text="A" />
-      <Label layoutX="78.0" layoutY="188.0" text="B" />
-      <Label layoutX="78.0" layoutY="227.0" text="C" />
-      <Label layoutX="77.0" layoutY="266.0" text="D" />
-      <Label layoutX="78.0" layoutY="305.0" text="E" />
-      <Label layoutX="134.0" layoutY="106.0" text="1" textFill="#1b1b1b" />
-      <Label layoutX="175.0" layoutY="106.0" text="2" />
-      <Label layoutX="215.0" layoutY="106.0" text="3" />
-      <Label layoutX="255.0" layoutY="106.0" text="4" />
-      <Label layoutX="295.0" layoutY="106.0" text="5" />
+      <Label layoutX="59.0" layoutY="82.0" text="1" textFill="#1b1b1b" />
       <ImageView fx:id="imgA1" fitHeight="82.0" fitWidth="88.0" layoutX="20.0" layoutY="108.0" onMouseClicked="#MClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Wave.jpg" />
          </image>
       </ImageView>
+      <Label layoutX="6.0" layoutY="141.0" text="A" />
       <ImageView fx:id="imgA2" fitHeight="82.0" fitWidth="88.0" layoutX="105.0" layoutY="108.0" onMouseClicked="#MClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Wave.jpg" />
@@ -143,5 +136,15 @@
             <Image url="@../Wave.jpg" />
          </image>
       </ImageView>
+      <Label layoutX="7.0" layoutY="222.0" text="B" />
+      <Label layoutX="6.0" layoutY="303.0" text="C" />
+      <Label layoutX="6.0" layoutY="384.0" text="D" />
+      <Label layoutX="7.0" layoutY="465.0" text="E" />
+      <Label layoutX="144.0" layoutY="82.0" text="2" />
+      <Label layoutX="231.0" layoutY="82.0" text="3" />
+      <Label layoutX="314.0" layoutY="82.0" text="4" />
+      <Label layoutX="399.0" layoutY="82.0" text="5" />
+      <Label layoutX="268.0" layoutY="22.0" text="Label" />
+      <Button layoutX="373.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPlay" text="Button" />
     </children>
 </AnchorPane>
